--- a/.github/workflows/myDemo.yml
+++ b/.github/workflows/myDemo.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   push:
     branches:
-      - dwai-new-gh-action-patching
+      - main
 jobs:
   exploreGithubActions:
     runs-on: ubuntu-24.04
