--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,11 @@ jobs:
         uses: nasa-jpl/patch-version@main
       - run: echo "The old_tag output was ${{ steps.patching.outputs.old_tag }}"
       - run: echo "The new_tag output was ${{ steps.patching.outputs.new_tag }}"
-      - name: List files in the repository
+      - name: Workaround chown to deal with .git/objects owned by root instead of runner
         run: |
-          ls -al ${{ github.workspace }}
-          # sudo chown runner:docker -R .git
-          ls -al .git/objects
+          sudo chown runner:docker -R .git
       - name: Add and commit patched files
         uses: Endbug/add-and-commit@v9
         with:
           add: "CMakeLists.txt"
-          author_name: "Dennis Wai"
-          author_email: "Dennis.Wai@jpl.nasa.gov"
           default_author: github_actions
