--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -23,5 +23,4 @@ jobs:
         with:
           add: "CMakeLists.txt"
           default_author: github_actions
-          tag: "${{ steps.patching.outputs.new_tag }} --force"
-          tag_push: "--force"
+          tag: "${{ steps.patching.outputs.new_tag }}"
