--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -24,4 +24,4 @@ jobs:
           add: "CMakeLists.txt"
           default_author: github_actions
           tag: "${{ steps.patching.outputs.new_tag }}"
-          message: "[GitHub Actions] Patched version, bumped ${{ steps.patching.outputs.part }}"
+          message: "[GitHub Actions] Patched version, bumped ${{ steps.patching.outputs.part }} number"
