--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v4 # by default, only fetches one commit
       - name: Patch version information
         id: patching
-        uses: nasa-jpl/patch-version@V1
+        uses: nasa-jpl/patch-version@main
         with:
           commit_msg: "${{ github.event.head_commit.message }}"
           commit_sha: "${{ github.event.after }}"
