Update workflow to use the deploy key

--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4 # by default, only fetches one commit
+        with:
+          ssh-key: ${{ secrets.GHA_DEPLOY_KEY }}
       - name: Patch version information
         id: patching
         uses: nasa-jpl/patch-version@v2
