--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -4,6 +4,14 @@ on:
     branches:
       - main
 jobs:
+  debug-print:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: What is in here?
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
   patch-and-commit:
     runs-on: ubuntu-24.04
     steps:
