--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -13,6 +13,7 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
 
   patch-and-commit:
+    if: github.event.head_commit.author.name != 'github-actions'
     runs-on: ubuntu-24.04
     steps:
       - name: Check out repository code
