--- a/.github/workflows/patch-version.yml
+++ b/.github/workflows/patch-version.yml
@@ -4,14 +4,6 @@ on:
     branches:
       - main
 jobs:
-  debug-print:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: What is in here?
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-
   patch-and-commit:
     if: github.event.head_commit.author.name != 'github-actions'
     runs-on: ubuntu-24.04
@@ -36,4 +28,4 @@ jobs:
           add: "CMakeLists.txt"
           default_author: github_actions
           tag: "${{ steps.patching.outputs.new_tag }}"
-          message: "[GitHub Actions] Patched version, bumped ${{ steps.patching.outputs.bumped }} number"
+          message: "[GitHub Actions] Patched version, bumped ${{ steps.patching.outputs.bumped }} number [skip actions]"
